# pycross

./: .gitignore  LICENSE  README.md  TODO.MD  pyproject.toml
pycross/: __init__.py  __main__.py  app.py  game.py  play.py  pycross.tcss
pycross/console_mode/: __main__.py  game.py
tests/: conftest.py  test_app.py  test_game.py  test_interactions.py  test_snapshots.py
tests/console_mode/: test_game.py
