[tool.poetry]
name = "pycross"
version = "0.1.0"
description = "Nonogram puzzles in python"
authors = ["gcornejov <g.cornejovivado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.4"
pytest = "^8.2.1"
coverage = "^7.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
