[tool.poetry]
name = "pycross"
version = "0.1.0"
description = "Nonogram puzzles in python"
authors = ["gcornejov <g.cornejovivado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.4"
pytest = "^8.2.1"
coverage = "^7.5.2"
textual-dev = "^1.7.0"
pytest-asyncio = "^0.25.3"
pytest-textual-snapshot = "^1.1.0"
pytest-xdist = "^3.6.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
